--- a/style.css
+++ b/style.css
@@ -65,3 +65,7 @@
     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png);
     background-size: 288px 256px ;
 }
+
+#password input {
+    width: 16px
+}
